--- a/problems/reverse-words/pom.xml
+++ b/problems/reverse-words/pom.xml
@@ -6,6 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>reverse-words</name>
 	<description>Reverse words of given string</description>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
