Adding JUnit tests

--- a/problems/reverse-polish-notation/java/pom.xml
+++ b/problems/reverse-polish-notation/java/pom.xml
@@ -5,6 +5,14 @@
 	<artifactId>reverse-polish-notation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>reverse-polish-notation</name>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
