--- a/problems/equlilibrium-index/pom.xml
+++ b/problems/equlilibrium-index/pom.xml
@@ -5,6 +5,14 @@
 	<artifactId>equilibrium-index</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>equilibrium-index</name>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
