--- a/problems/second-smallest/java/pom.xml
+++ b/problems/second-smallest/java/pom.xml
@@ -6,6 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>second-smallest</name>
 	<description>Second smallest number</description>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
