--- a/problems/second-smallest/js/package.json
+++ b/problems/second-smallest/js/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0",
   "description": "Find second smallest number in given array",
   "main": "index.js",
+  "engines": {
+    "node": ">=8.4.0"
+  },
   "scripts": {
-    "test": "npm test"
+    "test": "cross-env NODE_ENV=test mocha **/*.test.js"
   },
   "keywords": [
     "second-smallest"
   ],
   "author": "sanket.meghani@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.3",
+    "expect": "^22.0.3",
+    "mocha": "^4.0.1"
+  }
 }
