--- a/problems/mirrored-binary-tree/pom.xml
+++ b/problems/mirrored-binary-tree/pom.xml
@@ -5,6 +5,14 @@
 	<artifactId>mirrored-binary-tree</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mirrored-binary-tree</name>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
