--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>problems/connected-cells</module>
 		<module>problems/equililibrium-index</module>
+		<module>problems/fraudulent-activity</module>
 		<module>problems/gridland-metro</module>
 		<module>problems/min-heap</module>
 		<module>problems/minimum-loss</module>
