--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>problems/equililibrium-index</module>
 		<module>problems/fraudulent-activity</module>
 		<module>problems/gridland-metro</module>
+        <module>problems/max-no</module>
 		<module>problems/min-heap</module>
 		<module>problems/minimum-loss</module>
 		<module>problems/mirrored-binary-tree</module>
