--- a/problems/counting-game/pom.xml
+++ b/problems/counting-game/pom.xml
@@ -5,6 +5,14 @@
     <artifactId>counting-game</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>counting-game</name>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
