Adding counting game to main README

--- a/problems/counting-game/pom.xml
+++ b/problems/counting-game/pom.xml
@@ -5,6 +5,9 @@
     <artifactId>counting-game</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>counting-game</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
