--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <name>coding-problems</name>
     <description>Coding problems and solutions</description>
     <packaging>pom</packaging>
+    <properties>
+        <java.version>21</java.version>
+    </properties>
     <modules>
         <module>problems/connected-cells</module>
         <module>problems/counting-game</module>
@@ -31,10 +34,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
